--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "emailjs-com": "^3.2.0",
     "json-server": "^0.17.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
