--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "json-server": "^0.17.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-chatbot-kit": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "recoil": "^0.7.7",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
