--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-chatbot-kit": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
+    "react-table": "^7.8.0",
     "recoil": "^0.7.7",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
