--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
     "react-table": "^7.8.0",
     "recoil": "^0.7.7",
@@ -31,6 +30,9 @@
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
