--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "emailjs-com": "^3.2.0",
+    "formik": "^2.2.9",
     "json-server": "^0.17.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -29,7 +30,8 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.9",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "react-scripts": "5.0.1"
