--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "json-server": "^0.17.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-chatbot-kit": "^2.1.2",
